Web Inspector: Settings: experimental setting editors are misaligned in other locales https://bugs.webkit.org/show_bug.cgi?id=192971 <rdar://problem/46718451>
Reviewed by Joseph Pecoraro.

* UserInterface/Views/SettingsTabContentView.css:
(.content-view.settings > .settings-view > .container):
(.content-view.settings > .settings-view > .container > .title):


Canonical link: https://commits.webkit.org/207553@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239521 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/UserInterface/Views/SettingsTabContentView.css
+++ b/Source/WebInspectorUI/UserInterface/Views/SettingsTabContentView.css
@@ -55,6 +55,7 @@
 
 .content-view.settings > .settings-view > .container {
     display: flex;
+    align-items: center;
     margin-top: 1em;
     font-size: 13px;
 }
@@ -75,7 +76,6 @@
 
 .content-view.settings > .settings-view > .container > .title {
     width: 50%;
-    margin-top: 2px;
     -webkit-margin-end: 6px;
     text-align: end;
 }
